Added summary and github pages

--- a/index.html
+++ b/index.html
@@ -158,14 +158,26 @@ e.g.
 
 
 <section>
+<h2>Github Pages</h2>
+
+<p class="fragment">gh-pages Branch -> USER.github.io/REPO</p>
+<p class="fragment">USER.github.io Repository -> USER.github.io</p>
+<p class="fragment">CNAME file for custom domains -> www.USER.com</p>
+
+</section>
+
+
+<section>
 <h2>Summary</h2>
 
     <p>Introduction</p>
-    <p>Introduction</p>
-    <p>Introduction</p>
-
+    <p>Installation</p>
+    <p>Configuration</p>
+    <p>Posts</p>
+    <p>Deployment</p>
 
 </section>
+
 
 <section>
 <h2>Credits</h2>
@@ -178,15 +190,15 @@ e.g.
 
 
 <section>
-<h2>Links</h2>
+<h2>Thank You</h2>
 <ul>
 <li><a href="https://github.com/elliz/iwdevs">Source code on GitHub: github.com/elliz/iwdevs</a></li>
 <li><a href="http://twitter.com/elliz">Follow me on Twitter - @elliz</a></li>
-    <li>Available for Contract Work ;)</li>
+<li>Available for Contract Work ;)</li>
 </ul>
+
+    <img src="img/jekyll-logo.png" style="border: 0; box-shadow:none ; background: none" alt="jekyll">
+
 </section>
 
-<!-- Finish -->
-<section>
-<img src="img/jekyll-logo.png" style="border: 0; box-shadow:none ; background: none" alt="jekyll">
-</section>
+
