Tweaks after the presentation

--- a/index.html
+++ b/index.html
@@ -115,6 +115,8 @@ layout: post
 title: Blogging Like a Hacker
 --- 
 </code></pre>
+
+<p class="fragment">Available in-page &#123;&#123; page.VALUE &#125;&#125;</p>
 </section>
 
 
@@ -125,12 +127,15 @@ title: Blogging Like a Hacker
     <p class="fragment">Optionally in CATEGORY/_posts folder</p>
 
 <pre class="fragment"><code data-trim="" contenteditable="">
-YYY-MM-DD-title-of-post.ext
+YYYY-MM-DD-title-of-post.ext
 
 e.g.
 
 2013-10-01-hello-world.md
 </code></pre>
+
+<p class="fragment">View actual posts ...</p>
+
 </section>
 
 
@@ -206,7 +211,6 @@ e.g.
 <ul>
 <li><a href="https://github.com/elliz/iwdevs">Source code on GitHub: github.com/elliz/iwdevs</a></li>
 <li><a href="http://twitter.com/elliz">Follow me on Twitter - @elliz</a></li>
-<li>Available for Contract Work ;)</li>
 </ul>
 
     <img src="img/jekyll-logo.png" style="border: 0; box-shadow:none ; background: none" alt="jekyll">
